@@ -1,3 +1,7 @@
+2016-05-05  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* testsuite/lib/libstdc++.exp (libstdc++_init): Enable on *-*-solaris*.
+
 2016-05-05  Jonathan Wakely  <jwakely@redhat.com>
 
 	* testsuite/experimental/filesystem/path/native/string.cc: Add
